Fixed overflow on search form

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,6 +6,7 @@
 
 .directions-group {
   margin-bottom: 15px;
+  overflow: hidden;
 }
 
 #map-canvas {
